[package]
name = "kuchikiki"
version = "0.9.0-alpha.0"
authors = [
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "(口利き) HTML tree manipulation library"
repository = "https://github.com/brave/kuchikiki"
edition = "2018"

[lib]
name = "kuchikiki"

[dependencies]
cssparser = "0.34"
html5ever = "0.29.1"
selectors = "0.26.0"
indexmap = "2.2.6"
precomputed-hash = "0.1"

[dev-dependencies]
tempfile = "3"
